Fri Nov 16 00:16:40 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/{gtkmenuitem.[ch],gtkcheckmenuitem.c,gtkimagemenuitem.c,
	gtkradiomenuitem.c,gtktearoffmenuitem.c}: Make Menu items
	NO_WINDOW widgets.

	* gtk/gtk{h,v,}paned.[ch]: Make NO_WINDOW widgets, some
	cleanup.

	* gtk/gtkstyle.c (gtk_default_draw_handle): Don't assume
	we are drawing in a window when drawing the paned handle.

2001-11-16  Sven Neumann  <sven@gimp.org>

	* demos/gtk-demo/appwindow.c
	* demos/gtk-demo/menus.c: reduce compiler warnings

Thu Nov 15 19:47:09 2001  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/main.c (button_press_event_cb): Remove 
	unused callback to make things compile with 
	gtk_tree_view_path_at_pos_change().

Thu Nov 15 18:44:33 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreedatalist.c (_gtk_tree_data_list_free): maybe fix #64160

2001-11-15  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkwindow.c (gtk_window_new): Move '.' out of quote. (#64407)
 
Thu Nov 15 16:24:55 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_bin_window): New function
	to get a GdkWindow to compare event->window to.

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_left_right): emit
	the signal for lateral motion too, #64361

	* gtk/gtktreeview.c (gtk_tree_view_get_path_at_pos): remove window
	arg as it is useless, #64137

Thu Nov 15 16:07:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c: Some small drawing fixes for scroll arrows.

Thu Nov 15 14:19:34 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/gdkwindow.c (gdk_window_invalidate_maybe_recurse): Cal
 	gdk_window_invalidate_maybe_recurse() for recursion.
 	(Soeren Sandmann)

 	* gtk/gtkviewport.c: Make !redraw_on_allocate. (Soeren Sandmann)
 
	* gtk/gtkcontainer.c (gtk_container_expose): Call
	gtk_container_forall() not _foreach() to propagate,
	since we need to propagate exposes to internal children
	as well.
